platform/config-sync/namespaces/nexus-app/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nexus-app
spec:
  mtls:
    mode: STRICT
